// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plan golden snapshots > closeout-rentals-due.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 0,
    "capture_sessions": 0,
    "change_orders": 0,
    "crew_schedules": 0,
    "customers": 1,
    "damage_charges": 0,
    "estimates": 0,
    "inventory": 3,
    "projects": 1,
    "qbo_sync_runs": 0,
    "rental_requests": 0,
    "rentals": 3,
    "takeoff_drafts": 0,
    "worker_issues": 0,
    "workers": 0,
  },
  "ops": [
    "query membership:e2e-admin",
    "query membership:e2e-office",
    "company_defaults company_defaults",
    "query customer:customer-bigco",
    "query inventory:scaffold-a",
    "query inventory:scaffold-b",
    "query inventory:scaffold-c",
    "query project:project-done",
    "query rental_contract:rental-gen",
    "query rental_line:rental-gen",
    "query rental_billing_run:rental-gen",
    "query rental_contract:rental-approved",
    "query rental_line:rental-approved",
    "query rental_billing_run:rental-approved",
    "event_log rental_billing_run:events:rental-approved [APPROVE]",
    "query rental_billing_run:stamp:rental-approved",
    "query rental_contract:rental-failed",
    "query rental_line:rental-failed",
    "query rental_billing_run:rental-failed",
    "event_log rental_billing_run:events:rental-failed [APPROVE→POST_REQUESTED→POST_FAILED]",
    "query rental_billing_run:stamp:rental-failed",
  ],
}
`;

exports[`plan golden snapshots > damage-charge-invoiced.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 0,
    "capture_sessions": 0,
    "change_orders": 0,
    "crew_schedules": 0,
    "customers": 1,
    "damage_charges": 1,
    "estimates": 0,
    "inventory": 0,
    "projects": 1,
    "qbo_sync_runs": 0,
    "rental_requests": 0,
    "rentals": 0,
    "takeoff_drafts": 0,
    "worker_issues": 0,
    "workers": 0,
  },
  "ops": [
    "query membership:e2e-admin",
    "query membership:e2e-office",
    "company_defaults company_defaults",
    "query customer:customer-bigco",
    "query project:project-damage",
    "query damage_charge:damage-frame-bent",
    "event_log damage_charge:events:damage-frame-bent [INVOICE]",
    "query damage_charge:stamp:damage-frame-bent",
  ],
}
`;

exports[`plan golden snapshots > estimate-push-failed.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 0,
    "capture_sessions": 0,
    "change_orders": 0,
    "crew_schedules": 0,
    "customers": 1,
    "damage_charges": 0,
    "estimates": 1,
    "inventory": 0,
    "projects": 1,
    "qbo_sync_runs": 0,
    "rental_requests": 0,
    "rentals": 0,
    "takeoff_drafts": 0,
    "worker_issues": 0,
    "workers": 0,
  },
  "ops": [
    "query membership:e2e-admin",
    "query membership:e2e-office",
    "company_defaults company_defaults",
    "query customer:customer-bigco",
    "query project:project-failed",
    "query estimate_push:est-failed",
    "event_log estimate_push:events:est-failed [REVIEW→APPROVE→POST_REQUESTED→POST_FAILED]",
    "query estimate_push:stamp:est-failed",
  ],
}
`;

exports[`plan golden snapshots > mid-flight-rental.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 0,
    "capture_sessions": 0,
    "change_orders": 0,
    "crew_schedules": 0,
    "customers": 1,
    "damage_charges": 0,
    "estimates": 0,
    "inventory": 1,
    "projects": 1,
    "qbo_sync_runs": 0,
    "rental_requests": 0,
    "rentals": 1,
    "takeoff_drafts": 0,
    "worker_issues": 0,
    "workers": 1,
  },
  "ops": [
    "query membership:e2e-admin",
    "query membership:e2e-office",
    "query membership:e2e-foreman",
    "company_defaults company_defaults",
    "query customer:customer-bigco",
    "query worker:foreman-1",
    "query inventory:scaffold-frame",
    "query project:project-alpha",
    "query rental_contract:rental-stuck",
    "query rental_line:rental-stuck",
    "query rental_billing_run:rental-stuck",
    "event_log rental_billing_run:events:rental-stuck [APPROVE→POST_REQUESTED]",
    "query rental_billing_run:stamp:rental-stuck",
    "query rental_billing_run:outbox:rental-stuck",
  ],
}
`;

exports[`plan golden snapshots > multi-crew-project.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 0,
    "capture_sessions": 0,
    "change_orders": 0,
    "crew_schedules": 0,
    "customers": 1,
    "damage_charges": 0,
    "estimates": 0,
    "inventory": 0,
    "projects": 1,
    "qbo_sync_runs": 0,
    "rental_requests": 0,
    "rentals": 0,
    "takeoff_drafts": 0,
    "worker_issues": 1,
    "workers": 3,
  },
  "ops": [
    "query membership:e2e-admin",
    "query membership:e2e-foreman-a",
    "query membership:e2e-foreman-b",
    "query membership:e2e-member-1",
    "company_defaults company_defaults",
    "query customer:customer-bigco",
    "query worker:foreman-a",
    "query worker:foreman-b",
    "query worker:member-1",
    "query project:project-multi",
    "query worker_issue:stopped-issue",
    "query clock_event:0",
    "query clock_event:1",
    "query clock_event:2",
  ],
}
`;

exports[`plan golden snapshots > qbo-sync-run-failed.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 0,
    "capture_sessions": 0,
    "change_orders": 0,
    "crew_schedules": 0,
    "customers": 0,
    "damage_charges": 0,
    "estimates": 0,
    "inventory": 0,
    "projects": 0,
    "qbo_sync_runs": 1,
    "rental_requests": 0,
    "rentals": 0,
    "takeoff_drafts": 0,
    "worker_issues": 0,
    "workers": 0,
  },
  "ops": [
    "query membership:e2e-admin",
    "company_defaults company_defaults",
    "query integration_connection:sync-failed",
    "query qbo_sync_run:sync-failed",
    "event_log qbo_sync_run:events:sync-failed [START_SYNC→SYNC_FAILED]",
    "query qbo_sync_run:stamp:sync-failed",
  ],
}
`;

exports[`plan golden snapshots > rental-request-approved.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 0,
    "capture_sessions": 0,
    "change_orders": 0,
    "crew_schedules": 0,
    "customers": 1,
    "damage_charges": 0,
    "estimates": 0,
    "inventory": 0,
    "projects": 0,
    "qbo_sync_runs": 0,
    "rental_requests": 1,
    "rentals": 0,
    "takeoff_drafts": 0,
    "worker_issues": 0,
    "workers": 0,
  },
  "ops": [
    "query membership:e2e-admin",
    "query membership:e2e-office",
    "company_defaults company_defaults",
    "query customer:customer-portal",
    "query rental_request:req-frames-30",
    "event_log rental_request:events:req-frames-30 [APPROVE]",
    "query rental_request:stamp:req-frames-30",
  ],
}
`;

exports[`plan golden snapshots > scaffold-bom-approved.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 1,
    "capture_sessions": 0,
    "change_orders": 0,
    "crew_schedules": 0,
    "customers": 1,
    "damage_charges": 0,
    "estimates": 0,
    "inventory": 0,
    "projects": 1,
    "qbo_sync_runs": 0,
    "rental_requests": 0,
    "rentals": 0,
    "takeoff_drafts": 0,
    "worker_issues": 0,
    "workers": 0,
  },
  "ops": [
    "query membership:e2e-admin",
    "company_defaults company_defaults",
    "query customer:customer-bom",
    "query project:project-bom",
    "query bom:bom-east-elev",
    "event_log bom:events:bom-east-elev [APPROVE]",
    "query bom:stamp:bom-east-elev",
  ],
}
`;

exports[`plan golden snapshots > steve-demo.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 0,
    "capture_sessions": 1,
    "change_orders": 1,
    "crew_schedules": 1,
    "customers": 5,
    "damage_charges": 0,
    "estimates": 1,
    "inventory": 1,
    "projects": 5,
    "qbo_sync_runs": 0,
    "rental_requests": 0,
    "rentals": 2,
    "takeoff_drafts": 3,
    "worker_issues": 1,
    "workers": 5,
  },
  "ops": [
    "query membership:user_3EVVTX1t2kaMZ3gxmJYWBMO17ZJ",
    "query membership:user_3EVVTb6fEte710ks9woAU1jJowJ",
    "query membership:user_3EVVTfJCwYPnVdCFQqE45Q9yrR3",
    "query membership:user_3EVVTkWfjImRPoZ9KrmvxZaFC4l",
    "query membership:e2e-bookkeeper",
    "company_defaults company_defaults",
    "query customer:cust-maple",
    "query customer:cust-riverside",
    "query customer:cust-oakwood",
    "query customer:cust-hillcrest",
    "query customer:cust-sunset",
    "query worker:foreman-lead",
    "query worker:est-lead",
    "query worker:crew-1",
    "query worker:crew-2",
    "query worker:crew-3",
    "query inventory:scaffold-frame",
    "query project:maple",
    "query project:riverside",
    "query project:oakwood",
    "query project:hillcrest",
    "query project:sunset",
    "query rental_contract:maple-invoice",
    "query rental_line:maple-invoice",
    "query rental_billing_run:maple-invoice",
    "event_log rental_billing_run:events:maple-invoice [APPROVE→POST_REQUESTED→POST_SUCCEEDED]",
    "query rental_billing_run:stamp:maple-invoice",
    "query rental_contract:riverside-pending",
    "query rental_line:riverside-pending",
    "query rental_billing_run:riverside-pending",
    "query estimate_push:oakwood-est",
    "event_log estimate_push:events:oakwood-est [REVIEW]",
    "query estimate_push:stamp:oakwood-est",
    "query worker_issue:riverside-stopped",
    "query clock_event:0",
    "query clock_event:1",
    "query takeoff_draft:hill-manual",
    "query takeoff_draft:hill-ai-takeoff",
    "query takeoff_draft:measurement:hill-ai-takeoff:0",
    "query takeoff_draft:hill-ai-count",
    "query takeoff_draft:default:maple",
    "query estimate_line:maple:0",
    "query estimate_line:maple:1",
    "query estimate_line:maple:2",
    "query takeoff_draft:default:riverside",
    "query estimate_line:riverside:3",
    "query takeoff_draft:default:oakwood",
    "query estimate_line:oakwood:4",
    "query material_bill:riverside:0",
    "query material_bill:riverside:1",
    "query material_bill:maple:2",
    "query labor_entry:sunset:0",
    "query labor_entry:maple:1",
    "query change_order:oakwood-co1",
    "event_log change_order:events:oakwood-co1 [SEND]",
    "query change_order:stamp:oakwood-co1",
    "query crew_schedule:sunset-today",
    "query daily_log:maple:2026-05-30",
    "query daily_log:sunset:2026-05-31",
    "query capture_session:steve-ai-takeoff-target-feedback",
    "query capture_session_event:steve-ai-takeoff-target-feedback:0",
    "query capture_session_event:steve-ai-takeoff-target-feedback:1",
    "query capture_session_event:steve-ai-takeoff-target-feedback:2",
    "query capture_artifact:steve-ai-takeoff-target-feedback-transcript",
    "query support_debug_packet:steve-ai-takeoff-target-feedback",
    "query context_work_item:steve-ai-takeoff-target-feedback",
    "query context_handoff_event:6bda299a-6b5d-434a-b5c0-63f291445b65",
    "query context_handoff_event:1621da44-c253-4280-b48b-184c4dd2a7a5",
  ],
}
`;

exports[`plan golden snapshots > takeoff-bulk.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 0,
    "capture_sessions": 0,
    "change_orders": 0,
    "crew_schedules": 0,
    "customers": 1,
    "damage_charges": 0,
    "estimates": 0,
    "inventory": 0,
    "projects": 1,
    "qbo_sync_runs": 0,
    "rental_requests": 0,
    "rentals": 0,
    "takeoff_drafts": 0,
    "worker_issues": 0,
    "workers": 0,
  },
  "ops": [
    "query membership:e2e-admin",
    "company_defaults company_defaults",
    "query customer:customer-bigco",
    "query project:project-bulk",
    "query takeoff_measurements:draft:project-bulk",
    "query takeoff_measurements:bulk:project-bulk",
  ],
}
`;

exports[`plan golden snapshots > takeoff-canvas-states.yaml plans to a stable shape 1`] = `
{
  "counts": {
    "boms": 0,
    "capture_sessions": 0,
    "change_orders": 0,
    "crew_schedules": 0,
    "customers": 1,
    "damage_charges": 0,
    "estimates": 0,
    "inventory": 0,
    "projects": 4,
    "qbo_sync_runs": 0,
    "rental_requests": 0,
    "rentals": 0,
    "takeoff_drafts": 3,
    "worker_issues": 0,
    "workers": 0,
  },
  "ops": [
    "query membership:e2e-admin",
    "query membership:e2e-office",
    "query membership:e2e-member",
    "company_defaults company_defaults",
    "query customer:cust",
    "query project:manual",
    "query project:uncal",
    "query project:ai",
    "query project:empty",
    "query blueprint_document:bp-manual",
    "query blueprint_page:pg-manual",
    "query blueprint_document:bp-uncal",
    "query blueprint_page:pg-uncal",
    "query blueprint_document:bp-ai",
    "query blueprint_page:pg-ai",
    "query blueprint_document:bp-empty",
    "query blueprint_page:pg-empty",
    "query takeoff_condition:cond-wall",
    "query takeoff_draft:manual-draft",
    "query takeoff_draft:measurement:manual-draft:0",
    "query takeoff_draft:measurement:manual-draft:1",
    "query takeoff_draft:measurement:manual-draft:2",
    "query takeoff_draft:measurement:manual-draft:3",
    "query takeoff_draft:uncal-draft",
    "query takeoff_draft:measurement:uncal-draft:0",
    "query takeoff_draft:ai-draft",
    "query takeoff_draft:measurement:ai-draft:0",
  ],
}
`;

exports[`plan golden snapshots — renderable takeoff fixtures > AI-capture draft pending review with geometry 1`] = `
[
  "company_defaults company_defaults",
  "query customer:cust-1",
  "query worker:foreman-1",
  "query inventory:scaffold",
  "query project:alpha",
  "query blueprint_document:bp",
  "query blueprint_page:bp-p1",
  "query takeoff_draft:ai-1",
  "query takeoff_draft:measurement:ai-1:0",
  "query takeoff_draft:measurement:ai-1:1",
]
`;

exports[`plan golden snapshots — renderable takeoff fixtures > blueprint + calibrated page + manual geometry draft 1`] = `
[
  "company_defaults company_defaults",
  "query customer:cust-1",
  "query worker:foreman-1",
  "query inventory:scaffold",
  "query project:alpha",
  "query blueprint_document:bp",
  "query blueprint_page:bp-p1",
  "query takeoff_draft:manual-1",
  "query takeoff_draft:measurement:manual-1:0",
  "query takeoff_draft:measurement:manual-1:1",
  "query takeoff_draft:measurement:manual-1:2",
]
`;
